Project structure updated

--- a/learn/vulnerabilities/14.authentication.md
+++ b/learn/vulnerabilities/14.authentication.md
@@ -51,4 +51,8 @@
     - Locking the account when there are too many login attempts.
     - Blocking remote ip address when there are too many login attempts.
 - Both approaches are vulnerable if implemented using flawed logic.
-- If failed attempts resets after successful login, then the attacker login to own account after every few attempts to make the locking the account approach virtually useless.
+
+- If failed attempts gets reset after successful login, then the attacker login to own account after every few attempts to make the locking the account approach virtually useless.
+
+- If the account lock, does not throw any error while login with the right credentials, even when the account is locked out, the attacker can bruteforce the password and login after the wait time is over.
+
